fix(entries): IE11 - datatable rows options has shifted down number

--- a/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
+++ b/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
@@ -521,6 +521,7 @@ body .p-tieredmenu {
   p-dropdown{
     position: absolute;
     right: 24px;
+    top: 1px;
     .p-dropdown{
       min-width: 48px;
       width: auto;
